force-app/main/default/objects/Kit_Bundle_Member__c/Kit_Bundle_Member__c.object-meta.xml
<CustomObject>
    <label>Kit/Bundle Member</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Kit/Bundle Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kit/Bundle Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>