force-app/main/default/objects/Kit_Bundle_Member__c/fields/AllowQuantityChange__c.field-meta.xml
<CustomField>
    <fullName>AllowQuantityChange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Kit/Bundle Member Lines only. Allows Quantity to be editable in Quote and Order configurator page. Does not lock the Quantity at the record level</description>
    <label>Edit Quantity</label>
    <type>Checkbox</type>
</CustomField>