force-app/main/default/objects/Kit_Bundle_Member__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Default Quantity value. Sets the initial Quantity value in Quote and Order configurator page. If blank, the Default Quantity is 1</description>
    <label>Default Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>