force-app/main/default/objects/Kit_Bundle_Member__c/fields/ReferenceKitBundle__c.field-meta.xml
<CustomField>
    <fullName>ReferenceKitBundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kit/Bundle</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Kit/Bundle Members</relationshipLabel>
    <relationshipName>KitBundles</relationshipName>
    <type>Lookup</type>
</CustomField>