force-app/main/default/objects/Kit_Bundle_Member__c/fields/ReferenceMemberProduct__c.field-meta.xml
<CustomField>
    <fullName>ReferenceMemberProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Member of Kit/Bundles</relationshipLabel>
    <relationshipName>KitsBundles</relationshipName>
    <type>Lookup</type>
</CustomField>