force-app/main/default/objects/Kit_Bundle_Member__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Member is included in Kit/Bundle. Cannot be removed.</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>