force-app/main/default/objects/Kit_Bundle_Member__c/validationRules/InactiveMember.validationRule-meta.xml
<ValidationRule>
    <fullName>InactiveMember</fullName>
    <active>true</active>
    <errorConditionFormula>ReferenceMemberProduct__r.IsActive = false</errorConditionFormula>
    <errorDisplayField>ReferenceMemberProduct__c</errorDisplayField>
    <errorMessage>Kit/Bundle Member Product is Not Active</errorMessage>
</ValidationRule>