force-app/main/default/objects/Kit_Bundle_Member__c/validationRules/KitandMemberCannotHaveSameName.validationRule-meta.xml
<ValidationRule>
    <fullName>KitandMemberCannotHaveSameName</fullName>
    <active>true</active>
    <errorConditionFormula>ReferenceMemberProduct__c = ReferenceKitBundle__c</errorConditionFormula>
    <errorDisplayField>ReferenceMemberProduct__c</errorDisplayField>
    <errorMessage>Kit/Bundle and Member Product Cannot Have the Same Name</errorMessage>
</ValidationRule>