force-app/main/default/objects/Kit_Bundle_Member__c/validationRules/kQuantityMustBeGreaterThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>kQuantityMustBeGreaterThanZero</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt;=0</errorConditionFormula>
    <errorDisplayField>ReferenceMemberProduct__c</errorDisplayField>
    <errorMessage>Kit/Bundle Member Must Have A Quantity Greater Than 0</errorMessage>
</ValidationRule>