force-app/main/default/objects/Kit_Bundle_Member__c/validationRules/Reference_Kit_Bundle_Is_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Reference_Kit_Bundle_Is_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(ReferenceKitBundle__c)</errorConditionFormula>
    <errorDisplayField>ReferenceKitBundle__c</errorDisplayField>
    <errorMessage>Kit/Bundle cannot be blank</errorMessage>
</ValidationRule>