force-app/main/default/objects/Kit_Bundle_Member__c/validationRules/Reference_Member_Product_Is_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Reference_Member_Product_Is_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(ReferenceMemberProduct__c)</errorConditionFormula>
    <errorDisplayField>ReferenceMemberProduct__c</errorDisplayField>
    <errorMessage>Member Product cannot be blank</errorMessage>
</ValidationRule>